--- a/Case Project Lesson 02/about.html
+++ b/Case Project Lesson 02/about.html
@@ -16,7 +16,7 @@
 	<title>HBB Hobby About</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="javajam.css">
+	<link rel="stylesheet" href="style.css">
 	<!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
 	</script>
