--- a/photos.html
+++ b/photos.html
@@ -16,7 +16,7 @@
 	<title>HeloGraphy Photos</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="javajam.css">
+	<link rel="stylesheet" href="style.css">
 	<!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
 	</script>
@@ -41,7 +41,8 @@
 			<main>
 <!-- helicopter photos here -->
 				<p>Here are some photos I've taken while up in a helicopter. (Slideshow and more photos coming soon)</p>
-					<img src="helophoto2.jpg" width="700px"/>
+					<img src="helophoto1.jpg" width="700px"/><
+					img src="helophoto2.jpg" width="700px"/>
 					<img src="helophoto3.jpg" width="700px"/>
 					<img src="helophoto4.jpg" width="700px"/>
 			</main>
