--- a/photos.html
+++ b/photos.html
@@ -41,8 +41,8 @@
 			<main>
 <!-- helicopter photos here -->
 				<p>Here are some photos I've taken while up in a helicopter. (Slideshow and more photos coming soon)</p>
-					<img src="helophoto1.jpg" width="700px"/><
-					img src="helophoto2.jpg" width="700px"/>
+					<img src="helophoto1.jpg" width="700px"/>
+					<img src="helophoto2.jpg" width="700px"/>
 					<img src="helophoto3.jpg" width="700px"/>
 					<img src="helophoto4.jpg" width="700px"/>
 			</main>
