--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <!--
       JavaScript 6th Edition
-      Chapter 1
+      Chapter 2
       Chapter case
 
       Helicopter Photos
@@ -39,7 +39,7 @@
 		
 			<main>
 				
-				<p>Want to contact me so I maybe a capture an ariel photo of your liking? Contact me via the form below.</p>
+				<p>Want to contact me to see if I can capture an ariel photo of your liking? Contact me via the form below.</p>
 					<div class="form"/>
 	<article>
       <form>
